# hermes-trailhead

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  TEAM.md  pyproject.toml
docs/: HERMES-INTEGRATION.md  boss-architecture.md  comparative-landscape.md  weekly-operating-loop.md
hermes_reach/: __init__.py  channels.py  cli.py  formatters.py  router.py  search.py
hermes_trailhead/: __init__.py  backends.py  channels.py  cli.py  extract.py  formatters.py  reliability.py  router.py  scoring.py  search.py
scripts/: install-hermes-trailhead-wrapper.sh
source_scout/: __init__.py  channels.py  cli.py  formatters.py  router.py  search.py
tests/: test_backends.py  test_channels.py  test_cli.py  test_contracts.py  test_extract.py  test_live_routing.py  test_router.py  test_scoring.py  test_search.py
