[project]
name = "hermes-reach"
version = "0.1.0"
description = "Help Hermes and command-line agents search hard-to-reach internet sources"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [{name = "Raymond Delgado / Hermes"}]
dependencies = []

[project.scripts]
hermes-reach = "hermes_reach.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_reach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
