[project]
name = "hermes-trailhead"
version = "0.1.0"
description = "Help command-line agents search hard-to-reach internet sources without requiring paid APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [{name = "Raymond Delgado / Onchito"}]
dependencies = []

[project.scripts]
hermes-trailhead = "hermes_trailhead.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_trailhead"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
